--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -23,7 +23,7 @@
                         <th>Date</th>
                         <th>Customer Name</th>
                         <th>Invoice number</th>
-                        <th>Invoice amount</th>
+<!--                        <th>Invoice amount</th>-->
                         <th>Product Name</th>
                         <th>Product soni</th>
                         <th>Edit</th>
@@ -36,7 +36,7 @@
                         <td th:text="${order.date}"></td>
                         <td th:text="${order.customer.name}"></td>
                         <td th:text="${order.invoice?.id}"></td>
-                        <td th:text="${order.invoice.amount}"></td>
+<!--                        <td th:text="${order.invoice.amount}"></td>-->
                         <td th:text="${order.detail[0].product.name}"></td>
                         <td th:text="${order.detail[0].quantity}"></td>
                         <td><a th:href="@{/order/edit/{id}(id=${order.id})}" class="btn btn-warning"><i
