--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,5 +25,10 @@
 <a th:href="@{/customer/list}"> READ ALL CUSTOMER</a>
 <br>
 <a th:href="@{/customer/add}"> ADD CUSTOMER</a>
+<br>
+<br>
+<a th:href="@{/payment/list}">PAYMENT LIST </a>
+<br>
+<a th:href="@{/payment/add}">PAYMENT ADD</a>
 </body>
 </html>
