--- a/src/main/resources/templates/payment/edit.html
+++ b/src/main/resources/templates/payment/edit.html
@@ -10,21 +10,19 @@
 </head>
 <body>
 <div class="container">
-    <h1>Customer Management System</h1>
+    <h1>Payment Management System</h1>
     <hr>
-    <h2>Update Customer</h2>
+    <h2>Update Payment</h2>
 
-    <form th:action="@{/customer/edit/{id}(id=${customer.id})}" th:object="${customer}" method="post">
+    <form th:action="@{/payment/edit/{id}(id=${paymentDTO.id})}" th:object="${paymentDTO}" method="post">
 
         <!-- Add hidden form field to handle update -->
-        <input type="hidden" th:value="${customer.id}" name="id"/>
+        <input type="hidden" th:value="${paymentDTO.id}" name="id"/>
 
-        <input type="text" th:value="${customer.name}" name="name" class="form-control mb-4 col-4">
-        <input type="text" th:value="${customer.country}" name="country" class="form-control mb-4 col-4">
-        <input type="text" th:value="${customer.address}" name="address" class="form-control mb-4 col-4">
-        <input type="text" th:value="${customer.phone}" name="phone" class="form-control mb-4 col-4">
+        <input type="text" th:value="${paymentDTO.amount}" name="amount" class="form-control mb-4 col-4">
+        <input type="number" th:value="${paymentDTO.invoiceId}" name="invoiceId" class="form-control mb-4 col-4">
 
-        <button type="submit" class="btn btn-info col-2"> Update Customer</button>
+        <button type="submit" class="btn btn-info col-2"> Update Payment</button>
     </form>
 
     <hr>
